fixed text overflowing on second line on small devices

--- a/packages/scandipwa/src/component/CheckoutBilling/CheckoutBilling.style.scss
+++ b/packages/scandipwa/src/component/CheckoutBilling/CheckoutBilling.style.scss
@@ -33,8 +33,10 @@
         margin-block-end: 24px;
         display: flex;
         align-items: center;
+        white-space: nowrap;
 
         @include mobile {
+            font-size: 15px;
             margin-block-end: 28px;
         }
 
